--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "contacts-api",
   "version": "1.0.0",
-  "description": "Démo d'un petit service API",
+  "description": "Laboratoire #1",
   "main": "server.js",
   "type":"module",
   "engines": {
     "node":"16.14.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "Nicolas Chourot",
+  "author": "Samuel Gauthier",
   "license": "ISC"
 }
